--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.12",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
+    "react-simple-typewriter": "^5.0.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.12.0",
     "swiper": "^11.1.4"
