--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.2.12",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-simple-typewriter": "^5.0.1",
     "sort-by": "^1.2.0",
